--- a/public/login.html
+++ b/public/login.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav class="navbar">
+    <div class="navbar-content">
+      <a href="/" class="logo">E-Commerce Store</a>
+    </div>
+  </nav>
   <div class="form-container">
     <h1>Login</h1>
     <form id="login-form">
