--- a/public/signup.html
+++ b/public/signup.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav class="navbar">
+    <div class="navbar-content">
+      <a href="/" class="logo">E-Commerce Store</a>
+      </div>
+    </div>
+  </nav>
   <div class="form-container">
     <h1>Signup</h1>
     <form id="signup-form">
